# gift

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  settings.toml  setup.py  t.py
.github/workflows/: pytest.yml  python-app.yml
gift/: cli.py  constants.py  gift.py  main.py  utils.py
gift/compress/: archive_manager.py  compression_manager.py  passthrough_archive_manager.py  tar_manager.py  zip_manager.py
gift/crypto/: aes_cbc_encryption_manager.py  encryption_engine_builder.py  encryption_manager.py  passthrough_encryption_manager.py
gift/crypto/engines/: aes_cbc_encryption_engine.py  aes_cbc_encryption_manager.py  encryption_engine.py  encryption_engine_builder.py  encryption_manager.py  passthrough_encryption_engine.py  passthrough_encryption_manager.py
gift/crypto/formatters/: encrypted_file_format.py
gift/secrets/: dict_secrets_manager.py  onepassword.py  op_secrets_manager.py  passthrough_secrets_manager.py  secrets_manager.py
test_dir/: file2.txt  file3.txt  file4.txt  file5.txt
tests/crypto/: test_crypto_basics.py  test_crypto_high_level.py
tests/crypto/engines/: test_aes_engine.py
